--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -93,6 +93,7 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
                 <Heart
                     className="w-3 h-3 text-red-500 inline fill-current animate-pulse ml-1"
                 />
+                <span class="ml-1">{t("footer.developer")}</span>
             </p>
         </div>
     </div>
